[tool.poetry]
name = "netbox-qr"
version = "0.1.0"
description = "A netbox plugin for generating qr codes for specific pages."
authors = ["FloMeyer <flo@flomeyer.de>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^21.5b1"
invoke = "^1.5.0"
pylint = "^2.8.2"
pylint-django = "^2.4.4"
pydocstyle = "^6.0.0"
yamllint = "^1.26.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "netbox_qr" },
]
